# matlab-multi-body-sim_app

./: .gitignore  CMakeLists.txt  README.md  configLocalPaths.m
balancing-floating-multiBody/: runDemo.m
balancing-floating-multiBody/app/iCubGazeboV2_5/: init_simulation.m
balancing-floating-multiBody/src/: floatingBaseBalancing.m  forwardDynamicsBalancing.m
config/: configLocalPaths.m
data-analyzer/: runDataAnalyzer.m
data-analyzer/app/humanModel/: dataProcessing.m  initDataAnalysis.m  init_humanModel.m
data-analyzer/app/othex_3d_arm/: dataProcessing.m  getAllMatrix.m  initDataAnalysis.m  init_othex_3d_arm.m
data-analyzer/src/: dataAnalyzer.m
dataAnalyzer/: runDemo.m
dataAnalyzer/app/humanModel/: dataProcessing.m  init_simulation.m
freeFalling-singleBody/: openExistingSimulation.m  runDemo.m
freeFalling-singleBody/src/: forwardDynamicsSingleBody.m  freeFallingSingleBody.m
gravComp-fixed-multiBody/: runDemo.m
gravComp-fixed-multiBody/src/: forwardDynamicsGravityComp.m  gravityCompensation.m
gravity-compensation/: openExistingSimulation.m  runGravityCompensation.m
gravity-compensation/src/: forwardDynamicsGravityComp.m  gravityCompensation.m
ironbot-optimization/: runSimulation.m
momentum-conservation/: openExistingSimulation.m  runMomentumConservation.m
momentum-conservation/src/: computeSystemVelocities.m  getCentrTransf.m  momentumConservation.m
templates/: runSimulation.m
templates/src/: mySimulation.m
test-idyntree-wrappers/: runWrappersTest.m
test-idyntree-wrappers/src/: wrappersTest.m
test-idyntreeWrappers/: runDemo.m
(+42 files in other folders)
